--- a/pagina3.html
+++ b/pagina3.html
@@ -42,30 +42,42 @@
         <div class="barra-especificaçoes">
             <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
         </div>
-        <div class="view-do-produto">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/pagina do produto - tenis principal.png" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block " alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
+        <div class="especificacoes">
+            <div class="view-do-produto">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner w-100">
+                        <div class="carousel-item active">
+                            <img src="images/tenis carrossel.png" class="d-block w-100 carrossel-image" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/tenis carrossel.png" class="d-block w-100" alt="..."
+                                style="background-color: rgba(255, 232, 188, 1);">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/tenis carrossel.png" class="d-block w-100" alt="..."
+                                style="background-color: rgba(255, 192, 188, 1);">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
+            </div>
         </div>
-
+        <div class="detalhes-tenis">
+            <h1>Tênis Nike Revolution 6 Next Nature Masculino</h1>
+            <p>Casual | Nike | REF:38416711</p>
+            <div class="estrlas">
+                <img src="images/Stars.png" alt="">
+            </div>
+        </div>
 
     </div>
 
@@ -132,7 +144,9 @@
             <p class="copy"> &copy; 2025 Digital College</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
